error
error:

#1st make try:
gcc -o prog const_stepsize_alg.c initial_data.c -I.
const_stepsize_alg.c:7:36: error: parameter 2 (‘params’) has incomplete type
 double gaussian(double x, Gaussian params)
                                    ^
const_stepsize_alg.c:14:37: error: parameter 1 (‘A’) has incomplete type
 double left_riemann_sum(InitialData A, Gaussian params,
                                     ^
const_stepsize_alg.c:14:49: error: parameter 2 (‘params’) has incomplete type
 double left_riemann_sum(InitialData A, Gaussian params,
                                                 ^
const_stepsize_alg.c: In function ‘left_riemann_sum’:
const_stepsize_alg.c:24:60: error: type of formal parameter 2 is incomplete
   (*func)((A.initial + (((i-1)*(A.final-A.initial))/A.N)), params);
                                                            ^
const_stepsize_alg.c: At top level:
const_stepsize_alg.c:31:38: error: parameter 1 (‘A’) has incomplete type
 double right_riemann_sum(InitialData A, Gaussian params,
                                      ^
const_stepsize_alg.c:31:50: error: parameter 2 (‘params’) has incomplete type
 double right_riemann_sum(InitialData A, Gaussian params,
                                                  ^
const_stepsize_alg.c: In function ‘right_riemann_sum’:
const_stepsize_alg.c:39:54: error: type of formal parameter 2 is incomplete
   (*func)(((A.initial+(i*(A.final-A.initial))/A.N)), params);
                                                      ^
const_stepsize_alg.c: In function ‘main’:
const_stepsize_alg.c:67:14: error: storage size of ‘A’ isn’t known
  InitialData A;
              ^
const_stepsize_alg.c:70:2: error: dereferencing pointer to incomplete type ‘InitialData {aka struct bounds_stepsize}’
  *pA = initialdata_init(N,a,b);
  ^
const_stepsize_alg.c:70:2: error: invalid use of incomplete typedef ‘InitialData’
const_stepsize_alg.c:72:11: error: storage size of ‘norm’ isn’t known
  Gaussian norm;
           ^
const_stepsize_alg.c:75:2: error: dereferencing pointer to incomplete type ‘Gaussian {aka struct gaussian_parameters}’
  *pnorm = g_p_init(mu,sigma); 
  ^
const_stepsize_alg.c:75:2: error: invalid use of incomplete typedef ‘Gaussian’
initial_data.c:8:1: warning: useless storage class specifier in empty declaration
 }/*Gaussian*/;
 ^
initial_data.c:15:1: warning: useless storage class specifier in empty declaration
 }/*InitialData*/;
 ^
#2nd make try:
gcc -c const_stepsize_alg.c
const_stepsize_alg.c:7:36: error: parameter 2 (‘params’) has incomplete type
 double gaussian(double x, Gaussian params)
                                    ^
const_stepsize_alg.c:14:37: error: parameter 1 (‘A’) has incomplete type
 double left_riemann_sum(InitialData A, Gaussian params,
                                     ^
const_stepsize_alg.c:14:49: error: parameter 2 (‘params’) has incomplete type
 double left_riemann_sum(InitialData A, Gaussian params,
                                                 ^
const_stepsize_alg.c: In function ‘left_riemann_sum’:
const_stepsize_alg.c:24:60: error: type of formal parameter 2 is incomplete
   (*func)((A.initial + (((i-1)*(A.final-A.initial))/A.N)), params);
                                                            ^
const_stepsize_alg.c: At top level:
const_stepsize_alg.c:31:38: error: parameter 1 (‘A’) has incomplete type
 double right_riemann_sum(InitialData A, Gaussian params,
                                      ^
const_stepsize_alg.c:31:50: error: parameter 2 (‘params’) has incomplete type
 double right_riemann_sum(InitialData A, Gaussian params,
                                                  ^
const_stepsize_alg.c: In function ‘right_riemann_sum’:
const_stepsize_alg.c:39:54: error: type of formal parameter 2 is incomplete
   (*func)(((A.initial+(i*(A.final-A.initial))/A.N)), params);
                                                      ^
const_stepsize_alg.c: In function ‘main’:
const_stepsize_alg.c:67:14: error: storage size of ‘A’ isn’t known
  InitialData A;
              ^
const_stepsize_alg.c:70:2: error: dereferencing pointer to incomplete type ‘InitialData {aka struct bounds_stepsize}’
  *pA = initialdata_init(N,a,b);
  ^
const_stepsize_alg.c:70:2: error: invalid use of incomplete typedef ‘InitialData’
const_stepsize_alg.c:72:11: error: storage size of ‘norm’ isn’t known
  Gaussian norm;
           ^
const_stepsize_alg.c:75:2: error: dereferencing pointer to incomplete type ‘Gaussian {aka struct gaussian_parameters}’
  *pnorm = g_p_init(mu,sigma); 
  ^
const_stepsize_alg.c:75:2: error: invalid use of incomplete typedef ‘Gaussian’
makefile:5: die Regel für Ziel „const_stepsize_alg.o“ scheiterte
make: *** [const_stepsize_alg.o] Fehler 1

